@@ -4,10 +4,16 @@ namespace Gemipedia
 {
 	public static class LanguageUtils
 	{
-        public static readonly string [] CommonLanguages = new string[] { "ar", "bg", "ca", "ce", "cs", "da", "nl", "en", "eo", "fi", "fr", "de", "he", "hu", "id", "it", "ja", "ko", "ms", "zh", "no", "ga", "pl", "pt", "ro", "ru", "sr", "sh", "es", "sv", "tr", "uk", "vi" };
+        public static readonly string [] CommonLanguages = new string[] { "simple", "ar", "bg", "ca", "ce", "cs", "da", "nl", "en", "eo", "fi", "fr", "de", "he", "hu", "id", "it", "ja", "ko", "ms", "zh", "no", "ga", "pl", "pt", "ro", "ru", "sr", "sh", "es", "sv", "tr", "uk", "vi" };
 
         public static string GetName(string langCode)
         {
+            // Special logic for Simple English Wikipedia.
+            if (IsSimpleEnglish(langCode))
+            {
+                return "Simple English";
+            }
+
             try
             {
                 var ci = new CultureInfo(langCode);
@@ -24,6 +30,12 @@ namespace Gemipedia
 
         public static bool IsValidCode(string langCode)
         {
+            // Special logic for Simple English Wikipedia.
+            if(IsSimpleEnglish(langCode))
+            {
+                return true;
+            }
+
             try
             {
                 var ci = new CultureInfo(langCode);
@@ -33,6 +45,9 @@ namespace Gemipedia
             { }
             return false;
         }
+
+        private static bool IsSimpleEnglish(string langCode)
+            => langCode.ToLower() == "simple";
     }
 }
 
